# MThesis

./: .gitignore  annotation_suggester.py  explanation.md  explanation2.md  generate_annotation_logs.py  generated_rules.xml  mistraldownload.py  mytext.txt  policy_config.example.json  policy_config.json  pyproject.toml  response_agent.py  result.txt  tmp_test.py  train_mistral_lora.py  training_annotations.json  training_candidates.json  training_data.jsonl  training_data_builder.py  wazuh_rule_agent.py  wazuh_rule_optimizer.py
Docs/: EngineSetup.md  diagrams.md
NetCore/Core/: AgentOrchestrator.cs  Core.csproj  Core.sln  DTOs.cs  EnrichedEvent.cs  NormalizedEvent.cs  Program.cs  ProgramHelpers.cs  RawAlert.cs  ThreatAssessment.cs
NetCore/Core.Tests/: AuditPipelineTests.cs  Core.Tests.csproj  ExecutionPipelineTests.cs  NormalizationPipelineTests.cs  PlannerCatalogOverrideTests.cs  PlannerTests.cs  PolicyEngineTests.cs  SimulationRunnerTests.cs
data/: alerts.json  archives.json  knowledge_base.jsonl  local_rules.xml
data/annotation_logs/: 1764529116.550717.json  1764529142.573929.json  1764529173.579879.json  1764529175.585451.json  1764529376.615075.json  1764529397.618093.json  1764536235.1042430.json  1764619838.1487638.json
data/enrichment/: assets.json  identities.json  threat_intel.json
intelligence/: README.md  __init__.py  app.py
intelligence/core/: base.py  cache.py  utils.py
intelligence/planners/: hybrid.py  local_model.py  ollama.py  remote.py  rule.py
thesis/: __init__.py  __main__.py  app.py
wazuh-specialized/: tokenizer_config.json
(+116 files in other folders)
